[level 2] Title: 전력망을 둘로 나누기, Time: 8.67 ms, Memory: 76.6 MB -BaekjoonHub